# vault-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  lint.yml
docs/: architecture.md  commands.md  config.md
scripts/: build_binary.ps1  build_binary.sh  clean.py  clean.sh  run_tests.sh  setup.sh
src/vault/: __init__.py  cli.py  config.py  constants.py  exceptions.py  logging.py
src/vault/commands/: backup_commands.py  config_commands.py  file_commands.py  git_commands.py  setup_commands.py  text_commands.py  workspace_commands.py
src/vault/crypto/: aes.py  kdf.py  utils.py
src/vault/storage/: backup.py  db.py  migrations.py  models.py
tests/: test_cli_backup.py  test_cli_file_secrets.py  test_cli_git.py  test_cli_setup.py  test_cli_text_secrets.py  test_cli_version.py  test_cli_workspace.py  test_crypto_manual.py  test_db_manual.py  test_migrations.py
